kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecom-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /api/product
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 5001
      - path: /api/search
        pathType: Prefix
        backend:
          service:
            name: search-service
            port:
              number: 5002
      - path: /api/payment
        pathType: Prefix
        backend:
          service:
            name: payment-service
            port:
              number: 5003
      - path: /api/email
        pathType: Prefix
        backend:
          service:
            name: email-service
            port:
              number: 5004
      - path: /api/cart
        pathType: Prefix
        backend:
          service:
            name: cart-service
            port:
              number: 5005
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 5173
